account for variants in segment plots

--- a/segment_plots.ipynb
+++ b/segment_plots.ipynb
@@ -53,16 +53,17 @@
     "\n",
     "def get_ds_name(ds):\n",
     "    short_name = ds[:ds.find(\"_\", 0, -1)]\n",
+    "    byte_size = re.search(r'[0-9]+$', ds, re.IGNORECASE).group()\n",
     "    if short_name == \"fb\":\n",
-    "        return \"face\"\n",
+    "        return f\"face{byte_size}\"\n",
     "    elif short_name == \"books\":\n",
-    "        return \"amzn\"\n",
-    "    return short_name\n",
+    "        return f\"amzn{byte_size}\"\n",
+    "    return f\"{short_name}{byte_size}\"\n",
     "\n",
     "def get_ds_size(ds):\n",
     "    return re.search(r'_([0-9]+M)_', ds, re.IGNORECASE).group(1)\n",
     "\n",
-    "def aggregate(data, num_bins=25):\n",
+    "def aggregate(data, num_bins=120):\n",
     "    data = np.pad(data, (0, max(0, num_bins - len(data))), 'constant')\n",
     "    bin_width = int(len(data) / num_bins)\n",
     "    \n",
@@ -84,68 +85,72 @@
    "outputs": [],
    "source": [
     "with open(\"./results/rmi_segments.csv\", newline=\"\") as rmi_segs, open(\"./results/rmi_robust_segments.csv\", newline=\"\") as rmi_robust_segs:\n",
-    "    filtered_ds = {ds for ds in datasets if \"200M\" in ds}\n",
+    "    filtered_ds = {ds for ds in datasets}# if \"200M\" in ds}\n",
     "\n",
-    "    fig_height = 3\n",
+    "    fig_height = 5\n",
     "    fig_width = int(math.ceil(len(filtered_ds) / fig_height))\n",
-    "    fig, axs = plt.subplots(fig_height, fig_width, figsize=(10 * fig_width, 3 * fig_height))#, sharex=True, sharey=True)\n",
-    "    \n",
+    "    fig, axs = plt.subplots(fig_height, fig_width, figsize=(10 * fig_width, 3 * fig_height), sharex=True, sharey=True)\n",
+    "\n",
+    "    plotting_variant = 0\n",
+    "    variants = 10\n",
     "    skipped = 0\n",
     "    for i, dataset in enumerate(datasets):\n",
-    "        rmi = [int(num) for num in rmi_segs.readline().split(\",\")[1:-1]]\n",
-    "        rmi_rob_1permyriad = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
-    "        rmi_rob_5permyriad = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
-    "        rmi_rob_1permille = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
-    "        rmi_rob_5permille = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
-    "        rmi_rob_0 = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
-    "        \n",
-    "        if dataset not in filtered_ds:\n",
-    "            skipped += 1\n",
-    "            continue\n",
+    "        for v in range(variants):\n",
+    "            rmi = [int(num) for num in rmi_segs.readline().split(\",\")[1:-1]]\n",
+    "            rmi_rob_1permyriad = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
+    "            rmi_rob_5permyriad = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
+    "            rmi_rob_1permille = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
+    "            rmi_rob_5permille = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
+    "            rmi_rob_0 = [int(num) for num in rmi_robust_segs.readline().split(\",\")[1:-1]]\n",
+    "\n",
+    "            if v != plotting_variant:\n",
+    "                continue\n",
     "            \n",
-    "        x = (i - skipped) % fig_width\n",
-    "        y = int((i - skipped) / fig_width)\n",
-    "        ax = axs[y][x]\n",
-    "        # ax.set_yscale(\"log\")\n",
-    "        ax.set_title(f\"{get_ds_name(dataset)} - {get_ds_size(dataset)} elements\")\n",
-    "        # ax.tick_params(\n",
-    "        #     axis='x',          # changes apply to the x-axis\n",
-    "        #     which='both',      # both major and minor ticks are affected\n",
-    "        #     bottom=False,      # ticks along the bottom edge are off\n",
-    "        #     top=False,         # ticks along the top edge are off\n",
-    "        #     labelbottom=False\n",
-    "        # )\n",
-    "        ax.grid(linestyle='--', linewidth=0.2)\n",
-    "        \n",
-    "        # build histogram with fixed bin size\n",
-    "        rmi = aggregate(rmi)\n",
-    "        rmi_rob_1permyriad = aggregate(rmi_rob_1permyriad)\n",
-    "        rmi_rob_5permyriad = aggregate(rmi_rob_5permyriad)\n",
-    "        rmi_rob_1permille = aggregate(rmi_rob_1permille)\n",
-    "        rmi_rob_5permille = aggregate(rmi_rob_5permille)\n",
-    "        rmi_rob_0 = aggregate(rmi_rob_0)\n",
-    "        \n",
-    "        label_pos = np.arange(len(rmi))\n",
-    "        \n",
-    "        # ax.plot(rmi, label=\"rmi\")\n",
-    "        # ax.plot(rmi_rob_1permyriad, label=\"robust rmi 0.01%\", linewidth=0.2)\n",
-    "        # ax.plot(rmi_rob_5permyriad, label=\"robust rmi 0.05%\", linewidth=0.2)\n",
-    "        # ax.plot(rmi_rob_1permille, label=\"robust rmi 0.1%\", linewidth=0.2)\n",
-    "        # ax.plot(rmi_rob_5permille, label=\"robust rmi 0.5%\", linewidth=0.2)\n",
-    "        # ax.plot(rmi_rob_0, label=\"robust rmi 0%\", linewidth=0.2)\n",
-    "        \n",
-    "        bar_width = 1.0 / 7.0\n",
-    "        ax.bar(label_pos - 2.5 * bar_width, rmi, bar_width, label=\"rmi\")\n",
-    "        ax.bar(label_pos - 1.5 * bar_width, rmi_rob_1permyriad, bar_width, label=\"rmi robust 0.01%\")\n",
-    "        ax.bar(label_pos - 0.5 * bar_width, rmi_rob_5permyriad, bar_width, label=\"rmi robust 0.05%\")\n",
-    "        ax.bar(label_pos + 0.5 * bar_width, rmi_rob_1permille, bar_width, label=\"rmi robust 0.1%\")\n",
-    "        ax.bar(label_pos + 1.5 * bar_width, rmi_rob_5permille, bar_width, label=\"rmi robust 0.5%\")\n",
-    "        ax.bar(label_pos + 2.5 * bar_width, rmi_rob_0, bar_width, label=\"rmi robust 0%\")\n",
-    "        \n",
+    "            if dataset not in filtered_ds:\n",
+    "                skipped += 1\n",
+    "                continue\n",
+    "\n",
+    "            x = (i - skipped) % fig_width\n",
+    "            y = int((i - skipped) / fig_width)\n",
+    "            ax = axs[y][x]\n",
+    "            ax.set_yscale(\"log\")\n",
+    "            ax.set_title(f\"{get_ds_name(dataset)} - {get_ds_size(dataset)} elements\")\n",
+    "            # ax.tick_params(\n",
+    "            #     axis='x',          # changes apply to the x-axis\n",
+    "            #     which='both',      # both major and minor ticks are affected\n",
+    "            #     bottom=False,      # ticks along the bottom edge are off\n",
+    "            #     top=False,         # ticks along the top edge are off\n",
+    "            #     labelbottom=False\n",
+    "            # )\n",
+    "            ax.grid(linestyle='--', linewidth=0.1)\n",
+    "\n",
+    "            # ax.plot(rmi, label=\"rmi\")\n",
+    "            # ax.plot(rmi_rob_1permyriad, label=\"robust rmi 0.01%\", linewidth=0.2)\n",
+    "            # ax.plot(rmi_rob_5permyriad, label=\"robust rmi 0.05%\", linewidth=0.2)\n",
+    "            # ax.plot(rmi_rob_1permille, label=\"robust rmi 0.1%\", linewidth=0.2)\n",
+    "            # ax.plot(rmi_rob_5permille, label=\"robust rmi 0.5%\", linewidth=0.2)\n",
+    "            # ax.plot(rmi_rob_0, label=\"robust rmi 0%\", linewidth=0.2)\n",
+    "            \n",
+    "            # build histogram with fixed bin size\n",
+    "            rmi = aggregate(rmi)\n",
+    "            rmi_rob_1permyriad = aggregate(rmi_rob_1permyriad)\n",
+    "            rmi_rob_5permyriad = aggregate(rmi_rob_5permyriad)\n",
+    "            rmi_rob_1permille = aggregate(rmi_rob_1permille)\n",
+    "            rmi_rob_5permille = aggregate(rmi_rob_5permille)\n",
+    "            rmi_rob_0 = aggregate(rmi_rob_0)\n",
+    "\n",
+    "            label_pos = np.arange(len(rmi))\n",
+    "            bar_width = 1.0 / 6.0\n",
+    "            ax.bar(label_pos - 2.5 * bar_width, rmi, bar_width, label=\"rmi\")\n",
+    "            ax.bar(label_pos - 1.5 * bar_width, rmi_rob_1permyriad, bar_width, label=\"rmi robust 0.01%\")\n",
+    "            ax.bar(label_pos - 0.5 * bar_width, rmi_rob_5permyriad, bar_width, label=\"rmi robust 0.05%\")\n",
+    "            ax.bar(label_pos + 0.5 * bar_width, rmi_rob_1permille, bar_width, label=\"rmi robust 0.1%\")\n",
+    "            ax.bar(label_pos + 1.5 * bar_width, rmi_rob_5permille, bar_width, label=\"rmi robust 0.5%\")\n",
+    "            ax.bar(label_pos + 2.5 * bar_width, rmi_rob_0, bar_width, label=\"rmi robust 0%\")\n",
+    "            \n",
     "    handles, labels = axs[0][0].get_legend_handles_labels()\n",
     "    fig.legend(handles, labels, ncol=1, loc=\"center right\", labelspacing=0.1, borderpad=0.5, handlelength=1)\n",
-    "\n",
-    "    fig.savefig(f\"./plots/rmi_segments.pdf\")"
+    "    fig.savefig(f\"./plots/rmi_segments_{plotting_variant}.pdf\")"
    ]
   },
   {
