--- a/segment_plots.ipynb
+++ b/segment_plots.ipynb
@@ -85,11 +85,11 @@
    "outputs": [],
    "source": [
     "with open(\"./results/rmi_segments.csv\", newline=\"\") as rmi_segs, open(\"./results/rmi_robust_segments.csv\", newline=\"\") as rmi_robust_segs:\n",
-    "    filtered_ds = {ds for ds in datasets}# if \"200M\" in ds}\n",
+    "    filtered_ds = {ds for ds in datasets if \"200M\" in ds}\n",
     "\n",
-    "    fig_height = 5\n",
+    "    fig_height = 2\n",
     "    fig_width = int(math.ceil(len(filtered_ds) / fig_height))\n",
-    "    fig, axs = plt.subplots(fig_height, fig_width, figsize=(10 * fig_width, 3 * fig_height), sharex=True, sharey=True)\n",
+    "    fig, axs = plt.subplots(fig_height, fig_width, figsize=(10 * fig_width, 3 * fig_height))#, sharex=True, sharey=True)\n",
     "\n",
     "    plotting_variant = 0\n",
     "    variants = 10\n",
@@ -113,7 +113,7 @@
     "            x = (i - skipped) % fig_width\n",
     "            y = int((i - skipped) / fig_width)\n",
     "            ax = axs[y][x]\n",
-    "            ax.set_yscale(\"log\")\n",
+    "            # ax.set_yscale(\"log\")\n",
     "            ax.set_title(f\"{get_ds_name(dataset)} - {get_ds_size(dataset)} elements\")\n",
     "            # ax.tick_params(\n",
     "            #     axis='x',          # changes apply to the x-axis\n",
@@ -122,31 +122,31 @@
     "            #     top=False,         # ticks along the top edge are off\n",
     "            #     labelbottom=False\n",
     "            # )\n",
-    "            ax.grid(linestyle='--', linewidth=0.1)\n",
+    "            ax.grid(linestyle='--', linewidth=0.25)\n",
     "\n",
-    "            # ax.plot(rmi, label=\"rmi\")\n",
-    "            # ax.plot(rmi_rob_1permyriad, label=\"robust rmi 0.01%\", linewidth=0.2)\n",
-    "            # ax.plot(rmi_rob_5permyriad, label=\"robust rmi 0.05%\", linewidth=0.2)\n",
-    "            # ax.plot(rmi_rob_1permille, label=\"robust rmi 0.1%\", linewidth=0.2)\n",
-    "            # ax.plot(rmi_rob_5permille, label=\"robust rmi 0.5%\", linewidth=0.2)\n",
-    "            # ax.plot(rmi_rob_0, label=\"robust rmi 0%\", linewidth=0.2)\n",
+    "            ax.plot(rmi, label=\"rmi\", linewidth=0.5)\n",
+    "            ax.plot(rmi_rob_1permyriad, label=\"robust rmi 0.01%\", linewidth=0.5)\n",
+    "            ax.plot(rmi_rob_5permyriad, label=\"robust rmi 0.05%\", linewidth=0.5)\n",
+    "            ax.plot(rmi_rob_1permille, label=\"robust rmi 0.1%\", linewidth=0.5)\n",
+    "            ax.plot(rmi_rob_5permille, label=\"robust rmi 0.5%\", linewidth=0.5)\n",
+    "            ax.plot(rmi_rob_0, label=\"robust rmi 0%\", linewidth=0.5)\n",
     "            \n",
-    "            # build histogram with fixed bin size\n",
-    "            rmi = aggregate(rmi)\n",
-    "            rmi_rob_1permyriad = aggregate(rmi_rob_1permyriad)\n",
-    "            rmi_rob_5permyriad = aggregate(rmi_rob_5permyriad)\n",
-    "            rmi_rob_1permille = aggregate(rmi_rob_1permille)\n",
-    "            rmi_rob_5permille = aggregate(rmi_rob_5permille)\n",
-    "            rmi_rob_0 = aggregate(rmi_rob_0)\n",
+    "#             # build histogram with fixed bin size\n",
+    "#             rmi = aggregate(rmi)\n",
+    "#             rmi_rob_1permyriad = aggregate(rmi_rob_1permyriad)\n",
+    "#             rmi_rob_5permyriad = aggregate(rmi_rob_5permyriad)\n",
+    "#             rmi_rob_1permille = aggregate(rmi_rob_1permille)\n",
+    "#             rmi_rob_5permille = aggregate(rmi_rob_5permille)\n",
+    "#             rmi_rob_0 = aggregate(rmi_rob_0)\n",
     "\n",
-    "            label_pos = np.arange(len(rmi))\n",
-    "            bar_width = 1.0 / 6.0\n",
-    "            ax.bar(label_pos - 2.5 * bar_width, rmi, bar_width, label=\"rmi\")\n",
-    "            ax.bar(label_pos - 1.5 * bar_width, rmi_rob_1permyriad, bar_width, label=\"rmi robust 0.01%\")\n",
-    "            ax.bar(label_pos - 0.5 * bar_width, rmi_rob_5permyriad, bar_width, label=\"rmi robust 0.05%\")\n",
-    "            ax.bar(label_pos + 0.5 * bar_width, rmi_rob_1permille, bar_width, label=\"rmi robust 0.1%\")\n",
-    "            ax.bar(label_pos + 1.5 * bar_width, rmi_rob_5permille, bar_width, label=\"rmi robust 0.5%\")\n",
-    "            ax.bar(label_pos + 2.5 * bar_width, rmi_rob_0, bar_width, label=\"rmi robust 0%\")\n",
+    "#             label_pos = np.arange(len(rmi))\n",
+    "#             bar_width = 1.0 / 6.0\n",
+    "#             ax.bar(label_pos - 2.5 * bar_width, rmi, bar_width, label=\"rmi\")\n",
+    "#             ax.bar(label_pos - 1.5 * bar_width, rmi_rob_1permyriad, bar_width, label=\"rmi robust 0.01%\")\n",
+    "#             ax.bar(label_pos - 0.5 * bar_width, rmi_rob_5permyriad, bar_width, label=\"rmi robust 0.05%\")\n",
+    "#             ax.bar(label_pos + 0.5 * bar_width, rmi_rob_1permille, bar_width, label=\"rmi robust 0.1%\")\n",
+    "#             ax.bar(label_pos + 1.5 * bar_width, rmi_rob_5permille, bar_width, label=\"rmi robust 0.5%\")\n",
+    "#             ax.bar(label_pos + 2.5 * bar_width, rmi_rob_0, bar_width, label=\"rmi robust 0%\")\n",
     "            \n",
     "    handles, labels = axs[0][0].get_legend_handles_labels()\n",
     "    fig.legend(handles, labels, ncol=1, loc=\"center right\", labelspacing=0.1, borderpad=0.5, handlelength=1)\n",
